--- a/frontend_react/src/container/Header/Header.scss
+++ b/frontend_react/src/container/Header/Header.scss
@@ -2,7 +2,8 @@
     position: relative;
     background: url('../../assets/bgIMG.png');
     background-size: cover;
-    background-repeat: repeat;
+    // background-color: red;
+    background-repeat: no-repeat;
     background-position: center;
     
     .app__wrapper {
@@ -161,7 +162,7 @@
     }
 }
 
-.app__header-img {
+.app__header-img-container {
     flex: 1;
     height: 100%;
 
@@ -170,20 +171,22 @@
     align-items: flex-end;
     position: relative;
 
-    img {
-        width: 100%;
-        object-fit: contain;
-        z-index: 1;
-    }
 
-    .overlay-circle {
+    .overlay_circle {
         position: absolute;
         left: 0;
         right: 0;
         bottom: 0;
-        z-index: 0;
+        z-index: 1;
         width: 100%;
         height: 90%;
+    }
+
+    .app__header-img {
+        width: 100%;
+        object-fit: contain;
+        position: relative;
+        z-index:1;
     }
 
     @media screen and (max-width:1200px){
